remove and replace methods from ProgrammingExerciseFactory